====================================================================

               Winim - Nim's Windows API Module
                 (c) Copyright 2016-2018 Ward

====================================================================

Version 2.4.2
-------------
# winuser: fix bugs about MAKEINTRESOURCE template.

Version 2.4.1
-------------
# com: A critical bug about dot operator fixed.

Version 2.4
-----------
# Using '/' instead of '.' to import paths.
# com: Add `[]` and `[]=` to access com object.
# com: Add ability to access COM object constants.
# winstr: Add TString and TChar.

Version 2.3
-----------
# Add var version access proc for nested struct/union.
  It will be used in this situation:
    var insert: TVINSERTSTRUCT
    insert.item.mask = TVIF_TEXT or TVIF_PARAM
# Fix some literal constant with 'U' suffix.

Version 2.2
-----------
# Fix converter ambiguous problems.
# Add -d:useWinXP for Windows XP compatibility.

Version 2.1
-----------
# Ready for Nim compiler version 0.18.1.
# Remove some APIs that Windows 7 not supports to avoid
  "could not import" error message.

Version 2.0
-----------
# Ready for Nim compiler version 0.18.0.
# All windows API and constant definitions are translated from MinGW's
  headers files now. Not depends on "D WinAPI programming" anymore.
# API modules can import one by one if needed.
  Ex: import winim.inc.winuser
# Add lean module for import core Windows SDK only, mean module
  for core + Shell + OLE API.
  Use import winim.lean or -d:lean to switch.
# Add -d:useWinAnsi to use the Ansi versions of the Windows API.
# Add -d:mshtml or import winim.html or winim.inc.mshtml for MSHTML.
  (file size is too big, add only if needed.)
# Remove -d:winstyle (always enabled)
# winstr: add toHex, nullTerminate, nullTerminated, `<<<`, `>>>`,
  mlen, mIndex, etc. Also some fix some bug.
# com: add multithreads support.

Version 1.2.1
--------------
# winapi: add double quotes to resource file