@@ -4433,7 +4433,7 @@ template TreeView_GetCheckState*(hwnd: HWND, hti: HTREEITEM): UINT = discardable
 template TreeView_GetNextItem*(hwnd: HWND, hitem: HTREEITEM, code: UINT): HTREEITEM = discardable HTREEITEM SendMessage(hwnd, TVM_GETNEXTITEM, cast[WPARAM](code), cast[LPARAM](hitem))
 template TreeView_GetChild*(hwnd: HWND, hitem: HTREEITEM): HTREEITEM = TreeView_GetNextItem(hwnd, hitem, TVGN_CHILD)
 template TreeView_GetCount*(hwnd: HWND): UINT = discardable UINT SendMessage(hwnd, TVM_GETCOUNT, 0, 0)
-template TreeView_GetDropHilight*(hwnd: HWND): HTREEITEM = TreeView_GetNextItem(hwnd, NULL, TVGN_DROPHILITE)
+template TreeView_GetDropHilight*(hwnd: HWND): HTREEITEM = TreeView_GetNextItem(hwnd, 0, TVGN_DROPHILITE)
 template TreeView_GetEditControl*(hwnd: HWND): HWND = discardable HWND SendMessage(hwnd, TVM_GETEDITCONTROL, 0, 0)
 template TreeView_GetExtendedStyle*(hwnd: HWND): DWORD = discardable DWORD SendMessage(hwnd, TVM_GETEXTENDEDSTYLE, 0, 0)
 template TreeView_GetFirstVisible*(hwnd: HWND): HTREEITEM = TreeView_GetNextItem(hwnd, 0, TVGN_FIRSTVISIBLE)
@@ -4464,7 +4464,7 @@ template TreeView_GetItemHeight*(hwnd: HWND): int32 = discardable int32 SendMess
 template TreeView_GetItemPartRect*(hwnd: HWND, hitem: HTREEITEM, pRect: ptr RECT, pPartID: TVITEMPART): BOOL = (var info = TVGETITEMPARTRECTINFO(hti: hItem, prc: pRect, partID: pPartID); discardable BOOL SendMessage(hwnd, TVM_GETITEMPARTRECT, 0, cast[LPARAM](addr info)))
 template TreeView_GetItemRect*(hwnd: HWND, hitem: HTREEITEM, prc: LPRECT, fItemRect: BOOL): BOOL = (cast[ptr HTREEITEM](prc)[] = hitem; discardable BOOL SendMessage(hwnd, TVM_GETITEMRECT, cast[WPARAM](fItemRect), cast[LPARAM](prc)))
 template TreeView_GetItemState*(hwndTV: HWND, hti: HTREEITEM, mask: UINT): UINT = discardable UINT SendMessage(hwndTV, TVM_GETITEMSTATE, cast[WPARAM](hti), cast[LPARAM](mask))
-template TreeView_GetLastVisible*(hwnd: HWND): HTREEITEM = TreeView_GetNextItem(hwnd, NULL, TVGN_LASTVISIBLE)
+template TreeView_GetLastVisible*(hwnd: HWND): HTREEITEM = TreeView_GetNextItem(hwnd, 0, TVGN_LASTVISIBLE)
 template TreeView_GetLineColor*(hwnd: HWND): COLORREF = discardable COLORREF SendMessage(hwnd, TVM_GETLINECOLOR, 0, 0)
 template TreeView_GetNextSelected*(hwnd: HWND,  hitem: HTREEITEM): HTREEITEM = TreeView_GetNextItem (hwnd, hitem, TVGN_NEXTSELECTED)
 template TreeView_GetNextSibling*(hwnd: HWND, hitem: HTREEITEM): HTREEITEM = TreeView_GetNextItem(hwnd, hitem, TVGN_NEXT)
@@ -4472,10 +4472,10 @@ template TreeView_GetNextVisible*(hwnd: HWND, hitem: HTREEITEM): HTREEITEM = Tre
 template TreeView_GetParent*(hwnd: HWND, hitem: HTREEITEM): HTREEITEM = TreeView_GetNextItem(hwnd, hitem, TVGN_PARENT)
 template TreeView_GetPrevSibling*(hwnd: HWND, hitem: HTREEITEM): HTREEITEM = TreeView_GetNextItem(hwnd, hitem, TVGN_PREVIOUS)
 template TreeView_GetPrevVisible*(hwnd: HWND, hitem: HTREEITEM): HTREEITEM = TreeView_GetNextItem(hwnd, hitem, TVGN_PREVIOUSVISIBLE)
-template TreeView_GetRoot*(hwnd: HWND): HTREEITEM = TreeView_GetNextItem(hwnd, NULL, TVGN_ROOT)
+template TreeView_GetRoot*(hwnd: HWND): HTREEITEM = TreeView_GetNextItem(hwnd, 0, TVGN_ROOT)
 template TreeView_GetScrollTime*(hwnd: HWND): UINT = discardable UINT SendMessage(hwnd, TVM_GETSCROLLTIME, 0, 0)
 template TreeView_GetSelectedCount*(hwnd: HWND): DWORD = discardable DWORD SendMessage(hwnd, TVM_GETSELECTEDCOUNT, 0, 0)
-template TreeView_GetSelection*(hwnd: HWND): HTREEITEM = TreeView_GetNextItem(hwnd, NULL, TVGN_CARET)
+template TreeView_GetSelection*(hwnd: HWND): HTREEITEM = TreeView_GetNextItem(hwnd, 0, TVGN_CARET)
 template TreeView_GetTextColor*(hwnd: HWND): COLORREF = discardable COLORREF SendMessage(hwnd, TVM_GETTEXTCOLOR, 0, 0)
 template TreeView_GetToolTips*(hwnd: HWND): HWND = discardable HWND SendMessage(hwnd, TVM_GETTOOLTIPS, 0, 0)
 template TreeView_GetUnicodeFormat*(hwnd: HWND): BOOL = discardable BOOL SendMessage(hwnd, TVM_GETUNICODEFORMAT, 0, 0)
